--- a/src/stylesheets/datapicker.css
+++ b/src/stylesheets/datapicker.css
@@ -1,48 +1,14 @@
-input {
-  font-size: 13px;
-  border-radius: 4px;
-  box-shadow: inset 0 2px 2px #e9e9e9;
-  border: 1px solid #aeaeae;
-  line-height: 16px;
-  padding: 6px 10px 5px;
-}
-
-input:focus {
-  outline: none;
-  border-color: #aeaeae;
-  box-shadow: inset 0 2px 2px #e9e9e9, 0 0 10px 0 rgb(73 107 125 / 30%);
-}
-
-.day {
-  margin: 3px;
-  padding: 3px;
-  /* width: calc(100% / 7); */
-  width: 19px;
-  text-align: center;
-  font-size: 15px;
-}
-
-.previous-month,
-.next-month {
-  color: #9e9e9e;
-}
-
-.selected {
-  background: #00abee;
-  color: #ffffff;
-  border-radius: 50%;
-}
-
 .calendar {
   position: absolute;
   border: 1px solid gray;
   padding: 10px 10px;
   border-radius: 5px;
+  background-color: #ffffff;
+  z-index: 1000;
 }
 
 .datapicker-calendar {
   padding-top: 10px;
-  display: none;
 }
 
 .calendar-header {
@@ -80,17 +46,20 @@ input:focus {
   display: flex;
 }
 
-.calendar-week .day,
-svg {
+.calendar-day {
+  display: flex;
+  width: 100%;
+}
+
+.calendar-week .day, svg {
   cursor: pointer;
 }
 
-.day-week {
+.day, .day-week {
   margin: 3px;
   padding: 3px;
   /* width: calc(100% / 7); */
-  width: 19px;
-
+  width: 22px;
   text-align: center;
   font-size: 15px;
 }
@@ -101,4 +70,56 @@ svg {
 
 .show {
   display: block;
+}
+
+input {
+  font-size: 13px;
+  border-radius: 4px;
+  box-shadow: inset 0 2px 2px #e9e9e9;
+  border: 1px solid #aeaeae;
+  line-height: 16px;
+  padding: 6px 10px 5px;
+}
+
+input:focus {
+  outline: none;
+  border-color: #aeaeae;
+  box-shadow: inset 0 2px 2px #e9e9e9, 0 0 10px 0 rgb(73 107 125 / 30%);
+}
+
+.day {
+  margin: 3px;
+  padding: 3px;
+  /* width: calc(100% / 7); */
+  width: 19px;
+  text-align: center;
+  font-size: 15px;
+}
+
+.previous-month,
+.next-month {
+  color: #9e9e9e;
+}
+
+.selected {
+  background: #00abee;
+  color: #ffffff;
+  border-radius: 50%;
+}
+
+
+.calendar-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.arrow {
+  width: 5px;
+  height: 5px;
+  border: solid black;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 3px;
+  cursor: pointer;
 }
